syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.davincischools.leo.protos.message_of_the_day";

package message_of_the_day;

service MessageOfTheDay {
  rpc GetMessage (MessageRequest) returns (MessageResponse) {}
}

message MessageRequest {
  optional int32 id = 1;
}

message MessageResponse {
  optional string message = 1;
}